# blockAI

./: LICENSE  README.md  keyword.toml  keyword_rough.toml  keyword_strict.toml  package-lock.json  package.json  switch_keywords.py
.claude/: settings.local.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build_error.txt  check_err.txt  check_output.txt  tauri.conf.json
src-tauri/src/: blocklist.rs  browser_kill.rs  lib.rs  main.rs  monitor.rs  teacher_exit.rs  win_titles.rs  window_blur.rs  window_corner.rs
